k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mecanica-service
  labels:
    app: mecanica-app
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: mecanica-app
